--- a/src/main/resources/templates/nursery-main.html
+++ b/src/main/resources/templates/nursery-main.html
@@ -440,10 +440,26 @@
 				              <div class="box777">
 				                <div class="photo777">
 				                  <img class="photo" th:src="|img/어린이집/nursery${img[status.index]}.JPG|">
-				                  <button class="button7" th:id="'compare' + ${nursery.no}" value="false" th:onclick="|onClickCompare(${nursery.no})|">
-				                    <i class="ci-bookmark fw-bold mt-1"></i>
-				                    <b>&nbsp;비교&nbsp;</b>
-				                  </button>
+				                  <th:block th:if="${compare == null}">
+					                  <button class="button7" th:id="'compare' + ${nursery.no}" value="false" th:onclick="|onClickCompare(${nursery.no})|">
+					                    <i class="ci-bookmark fw-bold mt-1"></i>
+					                    <b>&nbsp;비교&nbsp;</b>
+					                  </button>
+				                  </th:block>
+				                  <th:block th:unless="${compare == null}">
+					                  	<th:block th:if="${#strings.contains(compare, nursery.no)}">
+						                  <button class="button7-fill" th:id="'compare' + ${nursery.no}" value="true" th:onclick="|onClickCompare(${nursery.no})|">
+						                    <i class="ci-bookmark fw-bold mt-1"></i>
+						                    <b>&nbsp;비교&nbsp;</b>
+						                  </button>
+					                  	</th:block>
+					                  	<th:block th:unless="${#strings.contains(compare, nursery.no)}">
+						                  <button class="button7" th:id="'compare' + ${nursery.no}" value="false" th:onclick="|onClickCompare(${nursery.no})|">
+						                    <i class="ci-bookmark fw-bold mt-1"></i>
+						                    <b>&nbsp;비교&nbsp;</b>
+						                  </button>
+					                  	</th:block>
+				                  </th:block>
 				                  <th:block th:if="${session.loginMember == null}">
 				                    <button class="btn-wishlist1 btn-sm" onclick="cantDo();">
 				                      <i id="heart" class="ci-heart fw-bold text-danger"></i>
@@ -571,7 +587,7 @@
 	        		success:
 	        			(data) => {
 	        				console.log(data);
-	        				if(data.add === true) {
+	        				if(data.remove === true) {
 	        					alert("해당 어린이집이 찜목록에서 삭제되었습니다.");
 	        					$(id).html('<i id="heart" class="ci-heart fw-bold text-danger"></i>');
 	        					$(id).attr("value", "false");
@@ -606,6 +622,7 @@
 		};
 		
 		function onClickCompare(id) {
+			var no = id;
 			id = '#compare' + id;
 		    var compareValue = null;
 		    
@@ -616,14 +633,52 @@
 			}
 		    
 		    if(compareValue == true) {
-		    	$(id).attr('class', 'button7-fill');
-		    	$(id).attr("value", "true");
+		    	$.ajax({
+					 type: "post",
+					 url: "/nursery-addCompare",
+					 data: {no},
+					 success:
+						 (data) => {
+		     				console.log(data);
+		     				if(data.add === true) {
+								 alert("해당 어린이집이 비교목록에 추가되었습니다.");
+								 $(id).attr('class', 'button7-fill');
+							     $(id).attr("value", "true");
+		     					
+		     				} else {
+		     					alert("비교목록 추가에 실패하였습니다. \n(목록에 최대 4개까지 추가할 수 있습니다.)");
+		     				}
+		     			},
+					error:
+						(e) => {
+							console.log(e);
+						}
+				 });
 		    } else {
-		    	$(id).attr('class', 'button7');
-		    	$(id).attr("value", "false");
+		    	 $.ajax({
+					 type: "post",
+					 url: "/nursery-deleteCompare",
+					 data: {no},
+					 success:
+						 (data) => {
+		     				console.log(data);
+		     				if(data.remove === true) {
+								 alert("해당 어린이집이 비교목록에서 삭제되었습니다.");
+								 $(id).attr('class', 'button7');
+							     $(id).attr("value", "false");
+		     					
+		     				} else {
+		     					alert("비교목록 삭제에 실패하였습니다.");
+		     				}
+		     			},
+					error:
+						(e) => {
+							console.log(e);
+						}
+				 });
+		    	
 		    }
 		  }
-	    
 	</script>
   </body>
 </html>
