아동관련시설 병원 메인, 상세 / 유채원 / 02-09 22:41 [주요내용] - 일반병원 이미지 변경, 야간진료병원 이미지 분리 	hp13.jpg ~ hp20.jpg 	nc1.jpg ~ nc12.jpg
- 병원 메인 페이지, 상세 페이지
	hospital-main.html, hospital-detail.html, hospital-detail.css,
	hospital-mapper.xml, Hospital.java, NightCare.java,
	HospitalMapper.java, HospitalService.java, HospitalController.java

- 코드 수정
	welfare-detail.html
	WelfareController.java

--- a/src/main/resources/templates/welfare-detail.html
+++ b/src/main/resources/templates/welfare-detail.html
@@ -199,6 +199,7 @@
                           
                       </div>
                     </div>
+                    
                   </div>
                 </div>
               </div> 
@@ -219,9 +220,10 @@
 		                        <a class="card-img-top d-block overflow-hidden" th:href=@{|/welfare-detail?no=${nearWelfare.cwNo}&img=${nearWfImgIdx[status.index]}|}>
 		                        	<img class="near" th:src="|img/ukids/facility/welfare/wf${nearWfImgIdx[status.index]}.jpg|" alt="Product">
 		                        </a>
+		                        
 		                        <div class="card-body nearwelfare py-2">
 		                          <h3 class="product-title fs-lg fw-bold toyname">
-		                          	<a th:href=@{|/welfare-detail?no=${nearWelfare.cwNo}&img=${status.index}|}>[[${nearWelfare.fcltNm}]]</a>
+		                          	<a th:href=@{|/welfare-detail?no=${nearWelfare.cwNo}&img=${nearWfImgIdx[status.index]}|}>[[${nearWelfare.fcltNm}]]</a>
 		                          </h3>
 		                          <div class="product-price">
 		                          	<i class="ci-bell ic"></i>
