--- a/src/main/resources/static/css/hospital-datail.css
+++ b/src/main/resources/static/css/hospital-datail.css
@@ -231,3 +231,65 @@
 .tns-carousel-inner{
   height: 350px;
 }
+
+
+
+/* 23.02.07 상세정보 수정 */
+.detailInfo {
+  height: auto;
+}
+.detailInfo dl {
+  display: flex;
+  justify-content: space-between;
+  padding: 48px;
+  width: 100%;
+  margin-bottom: 0;
+}
+#info1,
+#info2 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 500px;
+}
+#info1 div,
+#info2 div {
+  display: flex;
+}
+#info1 div dt,
+#info2 div dt {
+  flex-shrink: 0;
+  font-size: 18px;
+  font-weight: 600;
+  color: rgb(143, 143, 143);
+}
+#info1 div dt {
+  width: 150px;
+}
+#info2 div dt {
+  width: 175px;
+}
+#info1 div dt span,
+#info2 div dt span {
+  display: flex;
+  align-items: center;
+}
+#info1 div dt span i,
+#info2 div dt span i {
+  margin-right: 16px;
+  color: #fc6c93;
+}
+#info1 div dd,
+#info2 div dd {
+  width: 100%;
+  font-size: 18px;
+  font-weight: 600;
+  text-align: right;
+}
+#info1 div:last-child dd,
+#info2 div:last-child dd {
+  margin-bottom: 0;
+}
+.wfImg {
+	object-fit: cover;
+}
